syntax = "proto3";

package userservice;

import "web3.service.proto";

service UserService {
  rpc SignUp (SignUpRequest) returns (SignUpResponse);
  rpc AttachEmailOrEthAddress (AttachEmailOrEthAddressRequest) returns (AttachEmailOrEthAddressResponse);
  rpc GenerateOneTimeEmailCode(GenerateOneTimeEmailCodeRequest) returns (GenerateOneTimeEmailCodeResponse);
  rpc CheckOneTimeEmailCode(CheckOneTimeEmailCodeRequest) returns (CheckOneTimeEmailCodeResponse);
  rpc FindUser (FindUserRequest) returns (FindUserResponse);
  rpc GetUserPos (GetUserPosRequest) returns (GetUserPosResponse);
}

//-----------------------------

message SignUpRequest {
  string email = 1;
  string password = 2;
  string ethAddress = 3;
  string signedMessage = 4;
}

message SignUpResponse {
  bool success = 1;
  int32 reasonCode = 2;
  string userId = 3;
}

//-----------------------------

enum AttachOperation {
  ATTACH_EMAIL = 0;
  ATTACH_ETH_ADDRESS = 1;
}

message AttachEmailOrEthAddressRequest {
  AttachOperation operation = 1;
  string email = 2;
  string ethAddress = 3;
}

message AttachEmailOrEthAddressResponse {
  bool success = 1;
  int32 reasonCode = 2;
}

//-----------------------------

message SignInOrUpResponse {
    string ethAddress = 1;
    string nickname = 2;
    int32 worldX = 3;
    int32 worldY = 4;
    int32 nvy = 5;
    int32 aks = 6;
    repeated Captain captains = 7;
    repeated Ship ships = 8;
    repeated Island islands = 9;
    int32 dailyPlayersKilledCurrent = 10;
    int32 dailyPlayersKilledMax = 11;
    int32 dailyBotsKilledCurrent = 12;
    int32 dailyBotsKilledMax = 13;
    int32 dailyBossesKilledCurrent = 14;
    int32 dailyBossesKilledMax = 15;
}

//-----------------------------

message FindUserRequest {
  string email = 1;
  string ethAddress = 2;
}

message FindUserResponse {
  bool success = 1;
  string id = 2;
  string email = 3;
  string password = 4;
  string ethAddress = 5;
  string nickname = 6;
}

//-----------------------------

message GetUserPosRequest {
  string user = 1;
}

message GetUserPosResponse {
  int32 x = 1;
  int32 y = 2;
}

//-----------------------------

message GenerateOneTimeEmailCodeRequest {
  string email = 1;
}

message GenerateOneTimeEmailCodeResponse {
  bool success = 1;
}

message CheckOneTimeEmailCodeRequest {
  string email = 1;
  string code = 2;
}

message CheckOneTimeEmailCodeResponse {
  bool success = 1;
  int32 attemptsLeft = 2;
}

//-----------------------------